chore(css): fix_138 horizontal scrollbar

--- a/web-ui/src/main/resources/catalog/views/sextant/less/themes/sextant-catalogue.less
+++ b/web-ui/src/main/resources/catalog/views/sextant/less/themes/sextant-catalogue.less
@@ -17,3 +17,8 @@
 .gn-metadata-view dl > dt {
   overflow: auto;
 }
+// https://gitlab.ifremer.fr/sextant/geonetwork/-/issues/138#note_22437
+body > div > article .c_content, #body.fullscreen .c_content, .c_showlocation.fullscreen > .c_content > .c_body > div {
+  overflow-y: auto;
+  overflow-x: hidden;
+}
